--- a/style.css
+++ b/style.css
@@ -1,39 +1,58 @@
-#color-palette{
-display: flex;
-}
-
-.pixel {
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  #title {
+    text-align: center;
+  }
+  
+  
+  #color-palette {
+    display: flex;
+    justify-content: center;
+  }
+  
+  
+  .color {
     width: 40px;
     height: 40px;
-    border: black solid 1px;
-    background-color: white;}
-.color {
-    margin: 5px;
-    height: 50px;
-    width: 50px;
-    background-color:white;
-    border: solid 1px black;
-}
-#vermelho {
-    background-color: red;
-}
-#azul {
-    background-color: blue;
-}
-#verde {
-    background-color:green;
-}
-#preto {
-    background-color: black;
-}
-#pixel-board {
-    
-    display: flex;
-    flex-wrap: wrap;
-    width: 250px;
-    margin-left: 20px;
-}
-
-.selected{
-
-}
+    margin: 2px;
+    border: 1px solid black;
+    cursor: pointer;
+    border-radius: 100%;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  }
+  
+  #pixel-board {
+    margin: 0 auto;
+    text-align: center;
+    line-height: 0px;
+  }
+  
+  .pixel {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border: 1px solid black;
+    background-color: white;
+    cursor: pointer;
+  }
+  
+  .btn{
+    text-align: center;
+    padding: 20px;
+  }
+  
+  #clear-board{
+    cursor: pointer;
+  }
+  
+  button{
+    border: 0;
+    background-color: #206B53;
+    width: 60px;
+    height: 20px;
+    cursor: pointer;
+  }
