--- a/style.css
+++ b/style.css
@@ -1,29 +1,38 @@
-#art {
-    display: table;
-    border-spacing: 1px;
-    background-color: black;
-    border: 1px solid black;
-}
-
-#pixel-board {
-  display: table-row;
-}
-
-.pixel {
-display: table-cell;
-background-color: white;
-width: 40px;
-height: 40px;
-border: 1px solid black;
-}
-
 .color {
   display: inline-block;
+  border-style: solid;
+  border-width: 1px;
   width: 40px;
   height: 40px;
-  border: 1px solid black;
 }
 
-clear-board {
+.display-table {
+  display: table;
+}
+.display-table > div { 
+  display: table-row; 
+}
+.display-table > div > div { 
+  display: table-cell;
+  padding: 5px;
+}
+.pixel {
   display: inline-block;
+  border-style: solid;
+  border-width: 1px;
+
+}
+.line {
+  margin:0;
+  padding: 0;
+}
+#form{
+  display: inline-block;
+}
+#clear-board {
+  display: inline-block;
+  padding: 10px;
+  margin: 10px;
+  border-style: solid;
+  border-width: 1px;
 }
