--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
 /* Estilização */
-.body {
+body {
   margin: 0;
   padding: 0;
-  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  background-image: url(images.jpeg);
+}
+
+header {
+  border: solid silver;
+  padding: 10px;
+  background-color: darkred;
 }
 
 /* .table {
@@ -10,7 +18,7 @@
 } */
 
 #title {
-  color: black;
+  color:silver;
 }
 
 #color-palette {
@@ -26,9 +34,10 @@
 }
 
 #pixel-board {
-  margin-top: 10px;
+  margin-top: 50px;
   /* border-collapse: collapse; */
   margin-bottom: 10px;
+  padding: 50px;
 }
 
 /* #pixel-board td {
@@ -50,4 +59,33 @@
 
 #clear-board {
   margin-top: 10px;
+}
+
+button {
+  border-radius: 10px;
+}
+
+#board-size {
+  max-width: 115px;
+  border-radius: 10px;
+}
+
+footer {
+  background-color: darkred;
+  padding: 20px;
+  border: solid silver;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  margin-top: 50px;
+}
+
+table {
+  margin: auto;
+  text-align: center;
+}
+
+h4 {
+  color: silver;
+  font-weight: bold;
 }
