--- a/style.css
+++ b/style.css
@@ -1,24 +1,22 @@
 /* Estilização */
 body {
-  margin: 0;
-  padding: 0;
-  margin-right: auto;
-  margin-left: auto;
-  background-image: url(images.jpeg);
+  margin: auto;
+  background-image: url('images.jpeg');
+  padding: 5px;
+  text-align: center;
 }
 
 header {
   border: solid silver;
   padding: 10px;
   background-color: darkred;
+  font-size: x-large;
+  max-width: 95%;
+  margin: auto;
 }
 
-/* .table {
-  border-collapse: collapse;
-} */
-
 #title {
-  color:silver;
+  color: whitesmoke;
 }
 
 #color-palette {
@@ -35,15 +33,8 @@ header {
 
 #pixel-board {
   margin-top: 50px;
-  /* border-collapse: collapse; */
   margin-bottom: 10px;
-  padding: 50px;
 }
-
-/* #pixel-board td {
-  padding: 0;
-  margin: 0;
-} */
 
 .pixel {
   border: solid black;
@@ -51,10 +42,6 @@ header {
   border-width: 1px;
   height: 40px;
   width: 40px;
-  min-height: 40px;
-  max-height: 40px;
-  min-width: 40px;
-  max-width: 40px;
 }
 
 #clear-board {
@@ -63,6 +50,7 @@ header {
 
 button {
   border-radius: 10px;
+  max-width: 50%;
 }
 
 #board-size {
@@ -74,10 +62,10 @@ footer {
   background-color: darkred;
   padding: 20px;
   border: solid silver;
-  position: relative;
+  position: absolute;
   bottom: 0;
   width: 100%;
-  margin-top: 50px;
+  margin: auto;
 }
 
 table {
@@ -87,5 +75,6 @@ table {
 
 h4 {
   color: silver;
-  font-weight: bold;
+  font-weight: 900;
+  text-align: center;
 }
